--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "nodemon app.js"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,12 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.1.2",
-    "nodemon": "^2.0.15",
     "socketio": "^1.0.0"
   },
-  "homepage": "https://github.com/yash10019coder/cli-chat-server#readme"
+  "homepage": "https://github.com/yash10019coder/cli-chat-server#readme",
+  "devDependencies": {
+    "jest": "^27.4.5",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.1.6"
+  }
 }
