--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/yash10019coder/cli-chat-server/issues"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -25,7 +26,10 @@
   },
   "homepage": "https://github.com/yash10019coder/cli-chat-server#readme",
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "jest": "^27.4.5",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
     "supertest": "^6.1.6"
   }
